# NiceDay

./: .gitignore  .gitmodules  .travis.yml  BuildIDHeader.cmake  BuildManaged.bat  CMakeLists.txt  CopyMonoConfig.cmake  CopyMonoDll.cmake  DownloadAdditionalResources.bat  External-WIN32-Build-Travis.bat  External-WIN32-Build.bat  GenerateProjects.bat  InstallMono.bat  Internal-WIN32-Build.bat  NiceDay.sln  NiceDay.sln.DotSettings  README.md  SWIG_It.bat  TestNiceDay.cmake  hydraulic_erosion_equations.md  premake5.lua
Managed/: CMakeLists.txt  Managed.csproj
Managed/src/: Dog.cs  Entry.cs  Log.cs  StartLayer.cs
ManagedCore/: CMakeLists.txt  ND.runtimeconfig.json
ManagedCore/src/: Entry.cs  EntryCold.cs  EntryHotSwap.cs  Layer.cs  Lib.cs  Log.cs  ProxyAssLoader.cs
NiceDay/: CMakeLists.txt  NiceDay.vcxproj  NiceDay.vcxproj.filters  NiceWorld.world  NiceWorld.world.entity  imgui.ini
NiceDay/res/images/: bg_0.xcf
NiceDay/res/shaders/: AlphaMask.shader  Blur.shader  Chunk.shader  Chunk.shader.old  Color.shader  Light.shader  LightTexturePiece.shader  ParticleSprite.shader  ScaleEdge.shader  Test.shader  Testy.shader  Texture.shader  TextureQuad.shader
NiceDay/src/: App.cpp  App.h  AppGlobals.cpp  AppGlobals.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshInstance.cpp  ChunkMeshInstance.h  Core.h  Display.cpp  EntryPoint.cpp  EntryPoint.h  Game.cpp  Game.h  Input.cpp  Input.h  Log.cpp  Log.h  NDUtil.h  Pool.cpp  Pool.h  Sandbox.cpp  Sandbox.h  Scheduler.cpp  Scheduler.h  State.cpp  Stats.h  Translator.cpp  Translator.h  Window.cpp  Window.h  codeTemplate.txt  data.example  imgui_utils.cpp  imgui_utils.h  main.cpp  ndpch.cpp  ndpch.h  physShapes.cpp  physShapes.h
NiceDay/src/audio/: Player.cpp  Player.h  RingBuffer.cpp  RingBuffer.h  SoundLayer.cpp  SoundLayer.h  audio.cpp  audio.h  audio_handle.cpp  audio_handle.h  audio_header.h
NiceDay/src/core/: App.cpp  App.h  AppGlobals.cpp  AppGlobals.h  Core.h  FakeWindow.cpp  FakeWindow.h  IBinaryStream.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  Log.cpp  Log.h  NBT.cpp  NBT.h  NDUtil.h  ResourceMan.cpp  ResourceMan.h  SUtil.cpp  SUtil.h  Scheduler.cpp  Scheduler.h  Scoper.cpp  Scoper.h  Stats.h  Utils.h  Window.cpp  Window.h  WindowTemplate.cpp  WindowTemplate.h  imgui_utils.cpp  imgui_utils.h  json_fwd.h  physShapes.h  sid.cpp  sid.h  sids.cpp  sids.h
NiceDay/src/entity/: Camera.cpp  Camera.h  I2DLocalable.h
NiceDay/src/event/: ControlMap.cpp  ControlMap.h  Event.h  KeyEvent.cpp  KeyEvent.h  MessageEvent.cpp  MessageEvent.h  MouseEvent.h  WindowEvent.h
NiceDay/src/files/: DynamicSaver.cpp  DynamicSaver.h  FUtil.cpp  FUtil.h  FileUtil.cpp  FileUtil.h
NiceDay/src/graphics/: Bar.cpp  Bar.h  BatchRenderer2D.cpp  BatchRenderer2D.h  BlockTextureAtlas.cpp  Effect.cpp  Effect.h  FontMaterial.cpp  FontMaterial.h  FontObject.cpp  FontObject.h  GContext.cpp  GContext.h  Group.cpp  Group.h  IBatchRenderable2D.cpp  IBatchRenderable2D.h  IRenderable.h  Imager2D.cpp  Imager2D.h  IndexBuffer.cpp  ParticleRenderer.cpp  ParticleRenderer.h  ParticleRenderer2D.cpp  ParticleRenderer2D.h  Program.cpp  Program.h  Renderable2D.cpp  Renderable2D.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Sprite2D.cpp  Sprite2D.h  TestQuad.cpp  TestQuad.h  Texture.cpp  (+11 more)
NiceDay/src/gui/: GUIBasic.cpp  GUIBasic.h  GUIContext.cpp  GUIContext.h  GUIElement.cpp  GUIElement.h  GUIFactory.cpp  GUIFactory.h  GUIParser.cpp  GUIParser.h  GUIRenderer.cpp  GUIRenderer.h
NiceDay/src/layer/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  LuaExampel.cpp  LuaExampel.h  LuaExampel.i  LuaExampel_wrap.cpp  LuaExampel_wrap.cxx  LuaLayer.cpp  LuaLayer.h  MainLayer.cpp  MainLayer.h  PriorGenLayer.h  SoundLayer.cpp  SoundLayer.h  WorldLayer.cpp  WorldLayer.h  imgui_build.cpp  imguiplotvar.cpp  imguiplotvar.h
NiceDay/src/lua/: LuaLayer.cpp  LuaLayer.h  nd_luabinder.cpp  nd_luabinder.h
NiceDay/src/memory/: Pool.h  RingBuffer.h  StackAllocator.cpp  StackAllocator.h  stack_allocator.cpp  stack_allocator.h
NiceDay/src/metaprogramming/: Header.h
NiceDay/src/nbt/: NBT.cpp  NBT.h
NiceDay/src/net/: TCPTunnel.cpp  TCPTunnel.h  net.cpp  net.h  net_iterator.h
NiceDay/src/particle/: ParticleManager.cpp  ParticleManager.h
NiceDay/src/scene/: Atelier.cpp  Atelier.h  Camm.cpp  Camm.h  Colli.cpp  Colli.h  EditorLayer.cpp  EditorLayer.h  GlobalAccess.cpp  GlobalAccess.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h  NewMesh.cpp  NewMesh.h  NewScene.cpp  NewScene.h  Scene.cpp  Scene.h  SceneLayer.cpp  SceneLayer.h  components.h  components_imgui_access.cpp  components_imgui_access.h
NiceDay/src/script/: MonoLayer.cpp  MonoLayer.h  NativeScript.cpp  NativeScript.h
NiceDay/src/world/: Background.h  Block.cpp  Block.h  BlockAccess.cpp  BlockAccess.h  BlockRegistry.cpp  BlockRegistry.h  ChunkLoader.cpp  ChunkLoader.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshInstance.cpp  ChunkMeshInstance.h  ChunkPack.cpp  ChunkPack.h  FileChunkProvider.cpp  IChunkProvider.h  ITickable.h  LightCalculator.cpp  LightCalculator.h  ThreadedChunkProvider.cpp  ThreadedChunkProvider.h  ThreadedWorldGen.cpp  ThreadedWorldGen.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h  WorldIO.cpp  WorldIO.h  WorldRenderManager.cpp  WorldRenderManager.h
Sandbox/: CMakeLists.txt  Sandbox.vcxproj  Sandbox.vcxproj.filters
Sandbox/res/shaders/: Chunk.shader
SandboxTest/: CMakeLists.txt  Model.h  SandboxTest.vcxproj  arial_distance_field.fnt  default.fnt  mandelbrot.settings
SandboxTest/src/: ConsoleTestLayer.cpp  ConsoleTestLayer.h  GUIExampleWindow.cpp  GUIExampleWindow.h  GUITestLayer.cpp  GUITestLayer.h  MandelBrotLayer.cpp  MandelBrotLayer.h  ShaderFactory.cpp  ShaderFactory.h  TerrainApp.cpp  TerrainLayer - Copy.cpp  TerrainLayer - Copy.h  TerrainLayer.cpp  TerrainLayer.h  globals.h  simple.cpp  test.cpp  testEntt.cpp  testEntt.h
TestNiceDay/: CMakeLists.txt  testing.nbt
TestNiceDay/src/: NDTests.cpp  NDTests.h  NDUtilTest.cpp  internalEntryPoint.cpp  main.cpp  monoTest.cpp  netTest.cpp  openglTest.cpp  testList.cpp
(+312 files in other folders)
